bin/tests/snapshots/useless_has_attr__3c62cf80cceead28f219a180d924a929_fix.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a.b then x.a.b else default
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a.b then x.a.b else default
+x.a.b or default
