bin/tests/snapshots/useless_has_attr__514032635e11fe0f21c05881885de045_lint_json.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else default
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_has_attr",
      "note": "This `if` expression can be simplified with `or`",
      "code": 19,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 31
            }
          },
          "message": "Consider using `x.a or default` instead of this `if` expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 31
              }
            },
            "fix": "x.a or default"
          },
          "fixable": true
        }
      ]
    }
  ]
}
