bin/tests/snapshots/useless_has_attr__514032635e11fe0f21c05881885de045_lint_stderr.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else default
---
[useless_has_attr] Warning: This `if` expression can be simplified with `or`
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ if x ? a then x.a else default
   │ ───────────────┬──────────────  
   │                ╰──────────────── Consider using x.a or default instead of this if expression
───╯
