bin/tests/snapshots/useless_has_attr__9361572e1b83dd76c88aa8af9b983c7f_lint_json.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else if b then c else d
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_has_attr",
      "note": "This `if` expression can be simplified with `or`",
      "code": 19,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 42
            }
          },
          "message": "Consider using `x.a or (if b then c else d)` instead of this `if` expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 42
              }
            },
            "fix": "x.a or (if b then c else d)"
          },
          "fixable": true
        }
      ]
    }
  ]
}
