bin/tests/snapshots/useless_has_attr__9361572e1b83dd76c88aa8af9b983c7f_lint_stderr.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else if b then c else d
---
[useless_has_attr] Warning: This `if` expression can be simplified with `or`
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ if x ? a then x.a else if b then c else d
   │ ────────────────────┬────────────────────  
   │                     ╰────────────────────── Consider using x.a or (if b then c else d) instead of this if expression
───╯
